# dpi-dinglehopper-eval

./: .gitignore  README.md  pyproject.toml
.github/workflows/: desktop.yml
desktop/: .gitignore  PROBE-CHECKLIST.md
desktop/runtime/: build_wheelhouse.sh  fetch_python.sh  python-version.txt
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  remote.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lifecycle.rs  main.rs
desktop/ui/: index.html
docs/: findings.md
docs/superpowers/: 2026-07-19-deep-usability-seed.md  2026-07-19-iiif-brainstorm-parked.md  2026-07-20-sampling-research-grounding.md  ux-findings-2026-07.md
docs/superpowers/plans/: 2026-07-16-dpi-eval-web.md  2026-07-16-dpi-ocr-eval-demo.md  2026-07-17-dpi-eval-desktop.md  2026-07-19-dpi-eval-ux-pass.md
docs/superpowers/specs/: 2026-07-16-dpi-eval-web-design.md  2026-07-16-dpi-ocr-eval-demo-design.md  2026-07-17-dpi-eval-desktop-tauri-design.md  2026-07-19-dpi-eval-ux-pass-design.md
docs/upstream/: dinglehopper-report-json-escape.md
src/dpi_eval/: adapter.py  cli.py  pages.py  pairing.py  runner.py  web.py
tests/: test_adapter.py  test_alto_passthrough.py  test_batch.py  test_cli.py  test_grade_paths.py  test_pages.py  test_pairing.py  test_runner.py  test_tracer.py  test_web.py
tests/fixtures/alto/: page_0.xml
tests/fixtures/hocr/: page_0.gt.txt  page_0.hocr
tests/fixtures/reports/: page_0.html  summary.html
tests/fixtures/text/: page_0.gt.txt  page_0.txt
