[project]
name = "dpi-dinglehopper-eval"
version = "0.1.0"
description = "DPI glue around dinglehopper: grade OCR output against ground-truth samples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dinglehopper>=0.11.0",
]

[project.scripts]
dpi-eval = "dpi_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dpi_eval"]

[dependency-groups]
dev = ["pytest>=8"]
