[project]
name = "dpi-dinglehopper-eval"
version = "0.1.0"
description = "DPI glue around dinglehopper: grade OCR output against ground-truth samples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dinglehopper>=0.11.0",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29",
]

[project.scripts]
dpi-eval = "dpi_eval.cli:main"
dpi-eval-web = "dpi_eval.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dpi_eval"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]
